samples/_failures_safe/1761629344_f8243f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e86f79c8.c: In function ‘main’:
./samples/SAFE/__tmp_e86f79c8.c:174:9: error: expected declaration or statement at end of input
  174 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_e86f79c8.c:174:9: error: expected declaration or statement at end of input
